Feat: modified readme style.css index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Here comes some code soon...</h1>
     <p>Új bekezdés</p>
+    <ul>
+        <li>1es lista</li>
+        <li>2es lista</li>
+        <li>3as lista</li>
+    </ul>
+    <img src="">
 </body>
 </html>
