--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <thead>
             <tr>
                 <td class="tr">
-                    <div class="th">#</div>
-                    <div class="th">1</div>
-                    <div class="th">2</div>
-                    <div class="th">3</div>
-                    <div class="th">4</div>
+                    <th class="th">#</th>
+                    <th class="th">1</th>
+                    <th class="th">2</th>
+                    <th class="th">3</th>
+                    <th class="th">4</th>
                 </td>
             </tr>
         </thead>
